Update start.bat for using PowerShell.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 appdata/diskimg
+workspace/*
+local/app
+temp/
+system/app
+core/app/*
+sync.ffs_db
+*.lnk
+document/
+repos/
+appdata/linux/xiaoranzzz/
